<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.RegisterActivity">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:id="@+id/back_register"
            android:layout_below="@+id/card_icon_login"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/arrow_back_24" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="vertical">




            <EditText
                android:id="@+id/edit_state_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:maxLines="1"
                android:background="@drawable/shap_editext"
                android:hint="@string/text_state"/>


            <EditText
                android:id="@+id/edit_city_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:maxLines="1"
                android:background="@drawable/shap_editext"
                android:hint="@string/text_city"/>


            <EditText
                android:id="@+id/edit_area_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingStart="@dimen/_5sdp"
                android:maxLines="1"
                android:paddingEnd="@dimen/_5sdp"
                android:background="@drawable/shap_editext"
                android:hint="@string/text_area"/>


            <EditText
                android:id="@+id/edit_locality_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:maxLines="1"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:background="@drawable/shap_editext"
                android:hint="@string/text_locality"/>
        </LinearLayout>






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_gravity="center_vertical"
                app:cardUseCompatPadding="false"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/colorYellow"
                app:cardCornerRadius="@dimen/_8sdp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textSize="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/calibri_bold"
                    android:textColor="@color/colorWhite"/>

            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singnup"
                android:textSize="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/calibri_regular"
                android:textColor="@color/colorBlack"/>


            <View
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorGrayLight"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_gravity="center_vertical"/>



            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_5sdp"
                app:cardUseCompatPadding="false"
                app:cardElevation="0dp"
                android:layout_gravity="center_vertical"
                app:cardBackgroundColor="@color/colorGrayLight"
                app:cardCornerRadius="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:textSize="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/calibri_bold"
                    android:textColor="@color/colorWhite"/>

            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_store"
                android:textSize="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/calibri_regular"
                android:textColor="@color/colorGrayLight"/>

        </LinearLayout>


        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/calibri_bold"
            android:text="@string/done"
            android:textAllCaps="false"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12sdp" />



</LinearLayout>






    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>