<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:background="@drawable/shap_business_type">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/calibri_bold"
                android:layout_centerInParent="true"
                android:text="@string/select_business"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_15sdp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_70sdp">



         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_20sdp"
             android:orientation="horizontal">



             <ImageView
                 android:layout_width="@dimen/_60sdp"
                 android:layout_height="@dimen/_60sdp"
                 android:src="@drawable/proprieter_24dp"
                 android:padding="@dimen/_10sdp"
                 android:background="@drawable/shap_editext"/>


             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/calibri_bold"
                 android:layout_gravity="center_vertical"
                 android:gravity="center"
                 android:id="@+id/tv_sole_proprietor"
                 android:paddingTop="@dimen/_5sdp"
                 android:paddingBottom="@dimen/_5sdp"
                 android:background="@drawable/shap_type_text"
                 android:text="@string/sole_proprietor"
                 android:textColor="@color/colorWhite"
                 android:textSize="@dimen/_15sdp" />


         </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">



                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/partnership_24dp"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/shap_editext"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/calibri_bold"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:id="@+id/tv_partnership"
                    android:background="@drawable/shap_type_text"
                    android:text="@string/partnership"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15sdp" />


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">



                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/private_limited_24dp"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/shap_editext"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/calibri_bold"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:id="@+id/tv_private_limited"
                    android:background="@drawable/shap_type_text"
                    android:text="@string/private_limited"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15sdp" />


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">



                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/company_24dp"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/shap_editext"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/calibri_bold"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:id="@+id/tv_limited_company"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:background="@drawable/shap_type_text"
                    android:text="@string/limited_company"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15sdp" />


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">



                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/non_profit_24dp"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/shap_editext"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/calibri_bold"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:id="@+id/tv_non_profit"
                    android:background="@drawable/shap_type_text"
                    android:text="@string/non_profit"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15sdp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>