<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_back"
        tools:context=".activity.LoginActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/calibri_bold"
                android:gravity="center"
                android:text="Let's get Started!"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_20sdp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                app:cardCornerRadius="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center_vertical"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/india_flag" />


                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:background="@color/colorGrayView" />


                    <EditText
                        android:id="@+id/et_mobile_no"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@null"
                        android:fontFamily="@font/calibri_regular"
                        android:hint="@string/mobile_no"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_10sdp"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGrayLight"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/btn_login_mobile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/calibri_bold"
                android:text="@string/login_with_mobile"
                android:textAllCaps="false"
                android:background="@drawable/button_background"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/btn_login_google"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableLeft="@drawable/google_24dp"
                android:fontFamily="@font/calibri_bold"
                android:background="@drawable/button_background"
                android:text="@string/login_with_google"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/calibri_bold"
                android:gravity="center"
                android:text="@string/login_terms"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_15sdp" />

            <View
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_2sdp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorWhite"/>

        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>