<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activity.StoreCategoryActivity">


            <RelativeLayout
                android:id="@+id/rl_top"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:background="@color/purple_500">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/calibri_bold"
                    android:text="@string/select_category"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15sdp" />
            </RelativeLayout>


            <EditText
                android:id="@+id/et_search_category"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/rl_top"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/shap_editext"
                android:drawableEnd="@drawable/search_24dp"
                android:fontFamily="@font/calibri_regular"
                android:gravity="center_vertical"
                android:hint="@string/search_category"
                android:maxLines="1"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrayDark"
                android:textSize="@dimen/_12sdp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_search_category"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="vertical">

                <include
                    android:id="@+id/order_details"
                    layout="@layout/item_category" />

                <include layout="@layout/item_category" />

                <include layout="@layout/item_category" />

                <include layout="@layout/item_category" />

                <include layout="@layout/item_category" />

                <include layout="@layout/item_category" />


            </LinearLayout>


        </RelativeLayout>


        <Button
            android:id="@+id/btn_category_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/calibri_bold"
            android:text="@string/finish"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12sdp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>